make structure page responsive

--- a/structure.html
+++ b/structure.html
@@ -19,8 +19,7 @@
     <!-- Molstar container -->
     <div id="myViewer" class="myViewer"></div>
 
-    <button class="download-button" id="downloadStructureButton"
-            style="margin-top: 150px;">
+    <button class="download-button" id="downloadStructureButton">
       Download structure
     </button>
     <br>
