--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
           </form>
         </div>
       </div>
+
+      <div class="evodesign-logo">
+        <a href="https://evodesign.org">
+          <img src="images/logo_white.svg">
+        </a>
+      </div>
     </div>
 
     <div id="graph" style="float:left;"><svg width="1161" height="295"></svg></div>
