--- a/structure.html
+++ b/structure.html
@@ -31,6 +31,12 @@
       View in interaction network
     </button>
 
+    <div class="evodesign-logo">
+      <a href="https://evodesign.org">
+        <img src="images/logo_black.svg">
+      </a>
+    </div>
+
     <script src="js/structure.js"></script>
   </body>
 
